tests/baselines/reference/propertyAccessIPC1.errors.txt
tests/cases/compiler/propertyAccessIPC1.ts(13,1): error TS95009: Cannot access userid from the object because its interface does not contain the predicate present(userid). Use a non-undefined type guard.
tests/cases/compiler/propertyAccessIPC1.ts(14,1): error TS95009: Cannot access screenname from the object because its interface does not contain the predicate present(screenname). Use a non-undefined type guard.


==== tests/cases/compiler/propertyAccessIPC1.ts (2 errors) ====
    interface PrivateMessage {
        text?: string;
        userid?: number;
        screenname?: string;
    } constrains {
        present(text);
        or(and(present(userid), not(present(screenname))),
            and(not(present(userid)), present(screenname)));
    }
    
    let msg: PrivateMessage = {text: "Hi!", userid: 42};
    msg.text; //OK
    msg.userid; //NOT OK: fields that are not always required may only be accessed inside a non-undefined typeguard
    ~~~~~~~~~~
!!! error TS95009: Cannot access userid from the object because its interface does not contain the predicate present(userid). Use a non-undefined type guard.
    msg.screenname; //NOT OK
    ~~~~~~~~~~~~~~
!!! error TS95009: Cannot access screenname from the object because its interface does not contain the predicate present(screenname). Use a non-undefined type guard.
    